# theseus_alpha

./: .gitignore  README.md  config.json.example  main.py  pyproject.toml  requirements.txt  setup.py  test_trading_advice.json  trading_advice.json  trading_advice_20250111_232504.json
src/adjusters/: profile_adjusters.py
src/cli/: advisor.py
src/profilers/: perp_profiler.py  spot_profiler.py
src/trading/: executor.py  types.py  utils.py
src/utils/: example_utils.py  setup_utils.py
tests/: analyze_account.py  config.json  profile_adjusters.py  profiler.py  test_api_setup.py  test_combined_profile.py  test_executor.py  test_hyperliquid.py  test_llm_agent.py  test_market_trading.py  test_openai.py  test_profile_adjusters.py  test_profilers.py  test_real_trading.py  test_user_profiler.py
